corrects spacing errors between paragraphs

--- a/pure-css/about.css
+++ b/pure-css/about.css
@@ -101,6 +101,7 @@ html, body{
 }
 
 .text1{
+    margin-top: 5%;
     font-size: 47px;
 }
 
